# aoc-2024

./: .gitignore  README.md  pyproject.toml
1/: code.ipynb
10/: code.ipynb
11/: code.ipynb
12/: code.ipynb
13/: code.ipynb
14/: code.ipynb
15/: code.ipynb  sample_2.txt
19/: code.ipynb
2/: code.ipynb
3/: code.ipynb
4/: code.ipynb
5/: code.ipynb
6/: code.ipynb
7/: code.ipynb
8/: code.ipynb
9/: code.ipynb
