[project]
name = "aoc-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "matplotlib>=3.10.0",
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    "torch>=2.5.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "rich>=13.9.4",
    "ruff>=0.8.1",
]
